macaw-x86-cli/test-data/mem.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/mem.cbl:36:5: error: in main
  Memory store failed
  Details:
    The region wasn't allocated, wasn't large enough, or was marked as readonly
  annotation Nonce {indexValue = 267} false
COUNTEREXAMPLE
